Add buildURL doc theme helper

--- a/docs/theme/layouts/default.hbs
+++ b/docs/theme/layouts/default.hbs
@@ -6,7 +6,7 @@
     <title>{{model.name}} | {{project.name}}</title>
     <meta name="description" content="Documentation for {{project.name}}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="{{relativeURL "assets/css/main.css"}}" rel="stylesheet"/>
+    <link href="{{buildURL "assets/css/main.css"}}" rel="stylesheet"/>
 </head>
 <body>
 
