--- a/docs/theme/partials/member.reference.hbs
+++ b/docs/theme/partials/member.reference.hbs
@@ -1,10 +1,10 @@
 {{#with tryGetTargetReflectionDeep}}
     {{#ifCond ../name '===' name}}
-        Re-exports <a href="{{relativeURL url}}">{{name}}</a>
+        Re-exports <a href="{{buildURL url}}">{{name}}</a>
     {{else if flags.isExported}}
-        Renames and re-exports <a href="{{relativeURL url}}">{{name}}</a>
+        Renames and re-exports <a href="{{buildURL url}}">{{name}}</a>
     {{else}}
-        Renames and exports <a href="{{relativeURL url}}">{{name}}</a>
+        Renames and exports <a href="{{buildURL url}}">{{name}}</a>
     {{/ifCond}}
 {{else}}
     Re-exports {{name}}
