--- a/docs/theme/partials/header.hbs
+++ b/docs/theme/partials/header.hbs
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="table-wrap">
                 <div class="table-cell">
-                    <strong><a href="{{relativeURL "index.html"}}">{{project.name}}</a></strong>
+                    <strong><a href="{{buildURL "./index.html"}}">{{project.name}}</a></strong>
                 </div>
                 <div class="table-cell" id="tsd-widgets" hidden>
                     <div id="tsd-filter">
