--- a/docs/theme/partials/type.hbs
+++ b/docs/theme/partials/type.hbs
@@ -140,7 +140,7 @@ if an inner type may result in invalid output without them. For example:
 
 {{#*inline 'reference'}}
     {{#with getReflection }}
-        <a href="{{relativeURL url}}" class="tsd-signature-type" data-tsd-kind="{{kindString}}">
+        <a href="{{buildURL url}}" class="tsd-signature-type" data-tsd-kind="{{kindString}}">
             {{name}}
         </a>
     {{else}}
