--- a/docs/theme/partials/typeAndParent.hbs
+++ b/docs/theme/partials/typeAndParent.hbs
@@ -9,25 +9,25 @@
             {{#if reflection}}
                 {{#ifSignature reflection}}
                     {{#if reflection.parent.parent.url}}
-                        <a href="{{relativeURL reflection.parent.parent.url}}">{{reflection.parent.parent.name}}</a>
+                        <a href="{{buildURL reflection.parent.parent.url}}">{{reflection.parent.parent.name}}</a>
                     {{else}}
                         {{reflection.parent.parent.name}}
                     {{/if}}
                     .
                     {{#if reflection.parent.url}}
-                        <a href="{{relativeURL reflection.parent.url}}">{{reflection.parent.name}}</a>
+                        <a href="{{buildURL reflection.parent.url}}">{{reflection.parent.name}}</a>
                     {{else}}
                         {{reflection.parent.name}}
                     {{/if}}
                 {{else}}
                     {{#if reflection.parent.url}}
-                        <a href="{{relativeURL reflection.parent.url}}">{{reflection.parent.name}}</a>
+                        <a href="{{buildURL reflection.parent.url}}">{{reflection.parent.name}}</a>
                     {{else}}
                         {{reflection.parent.name}}
                     {{/if}}
                     .
                     {{#if reflection.url}}
-                        <a href="{{relativeURL reflection.url}}">{{reflection.name}}</a>
+                        <a href="{{buildURL reflection.url}}">{{reflection.name}}</a>
                     {{else}}
                         {{reflection.name}}
                     {{/if}}
